--- a/2018/CMakeLists.txt
+++ b/2018/CMakeLists.txt
@@ -18,7 +18,7 @@ add_executable(${PROJECT_NAME}
 target_include_directories(
     ${PROJECT_NAME} 
     PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/../utils/
+    ${CMAKE_CURRENT_SOURCE_DIR}/../include/
 )
 
 #Set C++17
