--- a/2018/CMakeLists.txt
+++ b/2018/CMakeLists.txt
@@ -23,23 +23,4 @@ target_include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/../include/
 )
 
-#Set C++17
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
-set_target_properties(${PROJECT_NAME} PROPERTIES CXX_EXTENSIONS OFF)
-
-#Set flags
-if(MSVC)
-  	target_compile_options(${PROJECT_NAME} PRIVATE 
-    	/W4 /WX)
-else()
-  	target_compile_options(${PROJECT_NAME} PRIVATE 
-		-Wall -Wextra -pedantic -Werror)		#Warning flags
-endif()
-
-#Find libraries
-find_package(Threads)
-
-#Finally
-target_link_libraries(${PROJECT_NAME} 
-    Threads::Threads 
-)
+setup_target(${PROJECT_NAME})
