--- a/2016/CMakeLists.txt
+++ b/2016/CMakeLists.txt
@@ -7,26 +7,26 @@ project(aoc2016 VERSION 1.0)
 #Set executable
 add_executable(${PROJECT_NAME} 
     main.cpp
-    Day1
-Day2
-Day3
-Day4
-Day5
-Day6
-Day7
-Day8
-Day9
-Day10
-Day11
-Day12
-Day13
-Day14
-Day15
-Day16
-Day17
-Day18
-Day19
-Day20
+    	day1.cpp
+	day2.cpp
+	day3.cpp
+	day4.cpp
+	day5.cpp
+	day6.cpp
+	day7.cpp
+	day8.cpp
+	day9.cpp
+	day10.cpp
+	day11.cpp
+	day12.cpp
+	day13.cpp
+	day14.cpp
+	day15.cpp
+	day16.cpp
+	day17.cpp
+	day18.cpp
+	day19.cpp
+	day20.cpp
 
 )
 
