--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,4 +30,10 @@ function(setup_target target)
     )
 endfunction()
 
+
+add_subdirectory(2015)
+add_subdirectory(2016)
+add_subdirectory(2017)
 add_subdirectory(2018)
+add_subdirectory(2019)
+
