--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,6 @@ endfunction()
 #add_subdirectory(2015)
 add_subdirectory(2016)
 #add_subdirectory(2017)
-#add_subdirectory(2018)
+add_subdirectory(2018)
 #add_subdirectory(2019)
 
